Update API implementation, remove non-relevant endpoint
